--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,4 @@ jobs:
     
     # Deploy Surge
     - name: Deploy React App to Surge
-      run: surge ./build zoha.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+      run: surge ./build zoha_ilyas.surge.sh --token ${{ secrets.SURGE_TOKEN }}
